# mofe-judge-main

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  rm_containers.sh  sqlx-data.json
.github/workflows/: ci.yml
scripts/: lang_cmd_base.rs  lang_cmd_base_json  language_update.py
src/: config.rs  conn.rs  db.rs  docker_lib.rs  entities.rs  error.rs  infra.rs  initializer.rs  lang_cmd.rs  lib.rs  main.rs  model.rs  models.rs  repositories.rs  repository.rs  schema.rs  scoring.rs  server.rs  task.rs  testtest.rs  utils.rs
src/domain/: model.rs  service.rs
src/domain/model/: identify.rs  model.rs
src/domain/service/: judge_runner_service.rs  judge_task_service.rs
src/infra/: connection_pool.rs  db_executor.rs
src/repositories/: problem_repo.rs  submit_repo.rs  testcase_repo.rs  testcase_result_repo.rs
src/wrapper/: error.rs
stab/: Dockerfile  README.md  cafe-docker-rs.yaml
test_db/: Dockerfile  README.md  docker-compose.yaml  init.sh  my.cnf
test_db/sql/: 0_create_db.sql  1_p6jav_cafecoder_prod_users.sql  2_p6jav_cafecoder_prod_contests.sql  3_p6jav_cafecoder_prod_problems.sql  4_p6jav_cafecoder_prod_submits.sql  p6jav_cafecoder_prod_ar_internal_metadata.sql  p6jav_cafecoder_prod_clarifications.sql  p6jav_cafecoder_prod_registrations.sql  p6jav_cafecoder_prod_schema_migrations.sql  p6jav_cafecoder_prod_testcase_sets.sql  p6jav_cafecoder_prod_testcase_testcase_sets.sql  p6jav_cafecoder_prod_testcases.sql  p6jav_cafecoder_prod_tester_relations.sql
