[package]
name = "cafecoder-rs"
version = "0.1.0"
authors = ["earlgray <earlgray283@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
db_test = []

[dependencies]
sqlx = { version = "0.7.1", features = [ "runtime-tokio", "mysql", "macros", "chrono"] }
dotenv = "0.15.0"
chrono = "0.4.26"
bollard = "0.14.0"
rand = "0.8.5"
tokio = { version = "1.2.0", features = ["full"] }
anyhow = "1.0.72"
async-trait = "0.1.72"
futures = "0.3.12"
serde = { version = "1.0.174", features = ["derive"] }
hyper = { version = "0.14.27", features = [ "full" ] }
serde_json = "1.0.103"
reqwest = { version = "0.11.18", default-features = false, features = ["json"] }
once_cell = "1.7.2"
